[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/next.png" type="Texture" id=1]
[ext_resource path="res://assets/restart.png" type="Texture" id=2]
[ext_resource path="res://assets/file.png" type="Texture" id=3]
[ext_resource path="res://UI.gd" type="Script" id=4]

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartPanel" type="Panel" parent="."]
margin_left = 10.0
margin_top = 535.0
margin_right = 65.0
margin_bottom = 590.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartButton" type="ToolButton" parent="RestartPanel"]
margin_right = 55.0
margin_bottom = 55.0
hint_tooltip = "Restart Script"
icon = ExtResource( 2 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CodePositionPanel" type="Panel" parent="."]
margin_left = 75.0
margin_top = 535.0
margin_right = 675.0
margin_bottom = 590.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineLabel" type="Label" parent="CodePositionPanel"]
margin_left = 10.0
margin_top = 10.0
margin_right = 50.0
margin_bottom = 24.0
text = "Line"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineValue" type="Label" parent="CodePositionPanel"]
margin_left = 10.0
margin_top = 30.0
margin_right = 50.0
margin_bottom = 44.0
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InstructionLabel" type="Label" parent="CodePositionPanel"]
margin_left = 60.0
margin_top = 10.0
margin_right = 130.0
margin_bottom = 24.0
text = "Instruction"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InstructionValue" type="Label" parent="CodePositionPanel"]
margin_left = 60.0
margin_top = 30.0
margin_right = 100.0
margin_bottom = 44.0
text = "print('something')"

[node name="NextPanel" type="Panel" parent="."]
margin_left = 685.0
margin_top = 535.0
margin_right = 740.0
margin_bottom = 590.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextButton" type="ToolButton" parent="NextPanel"]
margin_right = 55.0
margin_bottom = 55.0
hint_tooltip = "Next Instruction"
icon = ExtResource( 1 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FilePanel" type="Panel" parent="."]
margin_left = 750.0
margin_top = 535.0
margin_right = 949.0
margin_bottom = 590.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileLabel" type="Label" parent="FilePanel"]
margin_left = 10.0
margin_top = 10.0
margin_right = 50.0
margin_bottom = 24.0
text = "Current File"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileValue" type="Label" parent="FilePanel"]
margin_left = 10.0
margin_top = 30.0
margin_right = 50.0
margin_bottom = 44.0
text = "script.py"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectFilePanel" type="Panel" parent="."]
margin_left = 959.0
margin_top = 535.0
margin_right = 1014.0
margin_bottom = 590.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectFileButton" type="ToolButton" parent="SelectFilePanel"]
margin_right = 55.0
margin_bottom = 55.0
hint_tooltip = "Next Instruction"
icon = ExtResource( 3 )
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileDialog" type="FileDialog" parent="."]
margin_left = 212.0
margin_top = 100.0
margin_right = 812.0
margin_bottom = 400.0
window_title = "Open a File"
mode = 0
access = 2
current_dir = "/Users/nickpitrak/Desktop/CodeBattle"
current_path = "/Users/nickpitrak/Desktop/CodeBattle/"
__meta__ = {
"_edit_use_anchors_": false
}
